add js pro notes

--- a/Font-End/JavaScript-Base/Professional-JavaScript-for-Web-Developers-3rd/第一、二章.md
+++ b/Font-End/JavaScript-Base/Professional-JavaScript-for-Web-Developers-3rd/第一、二章.md
@@ -1,11 +1,11 @@
-﻿# 第一、二章 
+﻿# 第一、二章
 
 标签（空格分隔）： 高设笔记
 
 ---
 
 ## script 标签
-> - (?)async: 表示应该立即下载脚本，但不妨碍页面中的其他操作，比如下载其他资源或等待加载其他脚本。只对外部文件有效
+- (?)async: 表示应该立即下载脚本，但不妨碍页面中的其他操作，比如下载其他资源或等待加载其他脚本。只对外部文件有效
 - (?)defer: 表示可以延迟到文档万完全被解析和显示之后再执行。只对外部文件有效。
 - (*)src: 表示包含要执行代码的外部文件。
 - (*)type: 表示编写代码使用的脚本语言的内容类型（也称为MIME类型）。
@@ -22,7 +22,7 @@
 
 - **注意**
 
-script 标签里面不要出现 "```</script>```" 这样的字符，会破坏页面结构
+script 标签里面不要出现 "`</script>`" 这样的字符，会破坏页面结构
 
 ## noscript 标签
 - **触发条件**
@@ -32,7 +32,7 @@ script 标签里面不要出现 "```</script>```" 这样的字符，会破坏页
 
 符合以上任意一个条件就会显示 noscript 标签内的内容，例：
 
-```
+``` html
 <noscript>
 	<p>本页面需要浏览器的支持(启用) JacaScript </p>
 </noscript>
